# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/ordered_set/: ordered.c  ordered.h
libs/data_structures/unordered_set/: unordered.c  unordered.h
libs/data_structures/vector/: vector.c  vector.h
